Fixed spacing between search results. #1

--- a/default.css
+++ b/default.css
@@ -61,6 +61,8 @@
 
 .first-suggestion {
   padding-left: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 h3 {
